[fix] 修正addCart overflow

--- a/assets/scss/custom/components/_productsAddCart.scss
+++ b/assets/scss/custom/components/_productsAddCart.scss
@@ -9,8 +9,8 @@
     transition: opacity .3s ease-in-out;
     pointer-events: none;
     z-index: 99;
+    overflow: hidden;
     
-
     @include media-breakpoint-down(tablet) {
         @include size(100vw, 100%);
 
